@@ -77,7 +77,7 @@ gwen {
   console {
     log {
       colors = true
-      depth = 1
+      depth = 1                   # "infinity" to log all depths
       stepDefs = true
     }
   }
