@@ -8,6 +8,8 @@ Jun 12, 2022
     - `false` to make each cell in each row accessible as `<name>` in the template only
 - Introduce new setting to set console logging depth
   - `gwen.console.log.depth=number` (default is 1)
+    - Accepts a number greater than 1 representing the step depth to log to
+      - or `infinity` to log all depths
 
 3.13.6
 ======
